# U-VIP-SLAM

./: CMakeLists.txt  package.xml
include/: Grider_DOG.h  Grider_FAST.h  Grider_HARRIS.h  LoopClosing.h  ORBextractor.h  PnPsolver.h
libhaloc-kinetic/examples/: lip6indoor_dataset.cpp
src/: PnPsolver.cc  Sim3Solver.cc
